--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     <img src="https://iili.io/2B97Tnj.jpg" alt="Approval Image">
     <p>This is your key - <span id="unique-key"></span></p>
     <button id="send-approval">Send Approval</button>
-    <p>Contact: <a href="https://2-0-panel.vercel.app/">Facebook</a></p>
+    <p>Contact: <a href="fi11.bot-hosting.net:21130">Facebook</a></p>
 
     <script>
         // Generate a unique key
